# kolla-cli

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  README.rst  builddocs.sh  cli_setup.py  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/: host_destroy.yml  host_destroy_no_data.yml  stop.yml
ansible_plugins/: LICENSE  kolla_callback.py
buildrpm/: openstack-kollacli.spec
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst  kolla_cli.api.rst  kolla_cli.commands.rst  kolla_cli.common.ansible.rst  kolla_cli.common.rst  kolla_cli.rst  kolla_cli.tests.functional.rst  kolla_cli.tests.rst  kolla_cli.tests.unit.rst  kollacli.api.rst  kollacli.commands.rst  kollacli.common.ansible.rst  kollacli.common.rst  modules.rst
doc/source/api/reference/: hosts.rst
etc/: hosts.yml
kolla-cli/locale/: openstack-kollacli.pot
kolla_cli/: i18n.py  shell.py
kolla_cli/api/: certificate.py  client.py  config.py  control_plane.py  exceptions.py  group.py  host.py  job.py  password.py  properties.py  service.py  support.py
kolla_cli/commands/: certificate.py  config.py  deploy.py  exceptions.py  group.py  host.py  kolla_action.py  mode.py  password.py  property.py  pull.py  reconfigure.py  service.py  support.py  upgrade.py
kolla_cli/common/: allinone.py  ansible_inventory.py  host.py  host_group.py  inventory.py  passwords.py  properties.py  service.py  sshutils.py  subservice.py  support.py  utils.py
kolla_cli/common/ansible/: actions.py  job.py  playbook.py  utils.py
kolla_cli/tests/functional/: README.txt  common.py  functional_test_setup.sh  inventory_test_file  test_client_upgrade.py  test_config.py  test_deploy.py  test_destroy.py  test_group.py  test_host.py  test_password.py  test_property.py  test_reconfigure.py  test_service.py  test_stop.py  test_support.py
kolla_cli/tests/unit/: common.py  test_deploy_cmd.py  test_genconfig_cmd.py  test_group_cmd.py  test_host_cmd.py  test_prechecks_cmd.py  test_pull_cmd.py  test_reconfigure_cmd.py  test_service_cmd.py  test_stop_cmd.py  test_upgrade_cmd.py
kollacli/: common.py  exceptions.py  group.py  host.py  i18n.py  misc.py  password.py  property.py  service.py  shell.py  sshutils.py  utils.py  version.py  zone.py
kollacli/ansible/: inventory.py  json_generator.py  passwords.py  playbook.py  properties.py
kollacli/api/: async.py  client.py  control_plane.py  deploy.py  exceptions.py  group.py  host.py  job.py  password.py  properties.py  service.py  support.py
kollacli/commands/: deploy.py  exceptions.py  group.py  host.py  password.py  property.py  pull.py  reconfigure.py  service.py  support.py  upgrade.py
kollacli/common/: allinone.py  config.py  host_group.py  inventory.py  passwords.py  properties.py  service.py  sshutils.py  subservice.py  support.py  utils.py
kollacli/common/ansible/: actions.py  command.py  job.py  playbook.py
kollacli/objects/: hosts.py  zones.py
kollaclient/: common.py  host.py  i18n.py  property.py  service.py  shell.py  sshutils.py  utils.py  zone.py
kollaclient/ansible/: properties.py
kollaclient/objects/: hosts.py  zones.py
openstack-kolla-data/: ansible.cfg
openstack-kolla-data/ansible/: prechecks_preinstall.yml
openstack-kollaclient/locale/: openstack-kollaclient.pot
releasenotes/notes/: deprecate-in-ussuri-cycle-df7341b2a1e90997.yaml  drop-py-2-7-311423474c63c9c5.yaml
releasenotes/source/: conf.py  index.rst
tests/: callback_plugin.py  check_in_tests.py  client_upgrade.py  common.py  deploy.py  destroy.py  group.py  host.py  password.py  property.py  reconfigure.py  service.py  stop.py  support.py  test_config.yml  test_config.yml.example  test_config_json.py  test_hosts.example  tox_test_setup.sh  versions.py  zone.py
tools/: json_generator.py  kolla_actions.py  log_collector.py  passwd_editor.py
