[metadata]
name = kolla-cli
summary = Command Line Interface for Kolla-Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kolla-ansible/latest/

classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    kolla_cli

[entry_points]
console_scripts =
    kolla-cli = kolla_cli.shell:main

kolla.cli =
    action_check = kolla_cli.commands.kolla_action:Check
    action_deploy = kolla_cli.commands.kolla_action:Deploy
    action_genconfig = kolla_cli.commands.kolla_action:Genconfig
    action_postdeploy = kolla_cli.commands.kolla_action:PostDeploy
    action_pull = kolla_cli.commands.kolla_action:Pull
    action_reconfigure = kolla_cli.commands.kolla_action:Reconfigure
    action_upgrade = kolla_cli.commands.kolla_action:Upgrade
    certificate_init = kolla_cli.commands.kolla_action:CertificateInit
    config_reset = kolla_cli.commands.config:ConfigReset
    config_import = kolla_cli.commands.config:ConfigImport
    dump = kolla_cli.commands.support:Dump
    getdeploy = kolla_cli.commands.mode:Getdeploy
    group_add = kolla_cli.commands.group:GroupAdd
    group_addhost = kolla_cli.commands.group:GroupAddhost
    group_listhosts = kolla_cli.commands.group:GroupListhosts
    group_listservices = kolla_cli.commands.group:GroupListservices
    group_remove = kolla_cli.commands.group:GroupRemove
    group_removehost = kolla_cli.commands.group:GroupRemovehost
    host_add = kolla_cli.commands.host:HostAdd
    host_check = kolla_cli.commands.host:HostCheck
    host_destroy = kolla_cli.commands.host:HostDestroy
    host_list = kolla_cli.commands.host:HostList
    host_remove = kolla_cli.commands.host:HostRemove
    host_setup = kolla_cli.commands.host:HostSetup
    host_stop = kolla_cli.commands.host:HostStop
    password_clear = kolla_cli.commands.password:PasswordClear
    password_init = kolla_cli.commands.password:PasswordInit
    password_list = kolla_cli.commands.password:PasswordList
    password_set = kolla_cli.commands.password:PasswordSet
    password_setkey = kolla_cli.commands.password:PasswordSetKey
    property_clear = kolla_cli.commands.property:PropertyClear
    property_list = kolla_cli.commands.property:PropertyList
    property_set = kolla_cli.commands.property:PropertySet
    service_addgroup = kolla_cli.commands.service:ServiceAddGroup
    service_list = kolla_cli.commands.service:ServiceList
    service_listgroups = kolla_cli.commands.service:ServiceListGroups
    service_removegroup = kolla_cli.commands.service:ServiceRemoveGroup
    setdeploy = kolla_cli.commands.mode:Setdeploy

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-cli/locale/kolla-cli.pot

[update_catalog]
domain = kolla-cli
output_dir = kolla-cli/locale
input_file = kolla-cli/locale/kolla-cli.pot

[compile_catalog]
directory = kolla-cli/locale
domain = kolla-cli

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
