[metadata]
name = kolla-cli
summary = Command Line Interface for Kolla-Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kolla-cli/latest/
python-requires = >=3.6
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    kolla_cli

[entry_points]
console_scripts =
    kolla-cli = kolla_cli.shell:main

kolla.cli =
    action_check = kolla_cli.commands.kolla_action:Check
    action_deploy = kolla_cli.commands.kolla_action:Deploy
    action_genconfig = kolla_cli.commands.kolla_action:Genconfig
    action_prechecks = kolla_cli.commands.kolla_action:Prechecks
    action_postdeploy = kolla_cli.commands.kolla_action:PostDeploy
    action_pull = kolla_cli.commands.kolla_action:Pull
    action_reconfigure = kolla_cli.commands.kolla_action:Reconfigure
    action_stop = kolla_cli.commands.kolla_action:Stop
    action_upgrade = kolla_cli.commands.kolla_action:Upgrade
    certificate_init = kolla_cli.commands.kolla_action:CertificateInit
    config_reset = kolla_cli.commands.config:ConfigReset
    config_import = kolla_cli.commands.config:ConfigImport
    dump = kolla_cli.commands.support:Dump
    getdeploy = kolla_cli.commands.mode:Getdeploy
    group_add = kolla_cli.commands.group:GroupAdd
    group_addhost = kolla_cli.commands.group:GroupAddhost
    group_list = kolla_cli.commands.group:GroupList
    group_listhosts = kolla_cli.commands.group:GroupListhosts
    group_listservices = kolla_cli.commands.group:GroupListservices
    group_remove = kolla_cli.commands.group:GroupRemove
    group_removehost = kolla_cli.commands.group:GroupRemovehost
    host_add = kolla_cli.commands.host:HostAdd
    host_check = kolla_cli.commands.host:HostCheck
    host_destroy = kolla_cli.commands.host:HostDestroy
    host_list = kolla_cli.commands.host:HostList
    host_remove = kolla_cli.commands.host:HostRemove
    host_setup = kolla_cli.commands.host:HostSetup
    password_clear = kolla_cli.commands.password:PasswordClear
    password_init = kolla_cli.commands.password:PasswordInit
    password_list = kolla_cli.commands.password:PasswordList
    password_set = kolla_cli.commands.password:PasswordSet
    password_setkey = kolla_cli.commands.password:PasswordSetKey
    property_clear = kolla_cli.commands.property:PropertyClear
    property_list = kolla_cli.commands.property:PropertyList
    property_set = kolla_cli.commands.property:PropertySet
    service_addgroup = kolla_cli.commands.service:ServiceAddGroup
    service_list = kolla_cli.commands.service:ServiceList
    service_listgroups = kolla_cli.commands.service:ServiceListGroups
    service_removegroup = kolla_cli.commands.service:ServiceRemoveGroup
    setdeploy = kolla_cli.commands.mode:Setdeploy
